[package]
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2018"
readme = "README.md"
name = "src-ash-power"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "0.1.2"
scpi = "0.2.7"
git-version = "0.3.4"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["rt", "stm32f103", "medium"]



# this lets you use `cargo fix`!
[[bin]]
name = "src-ash-power"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
opt-level = 'z'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
