[package]
authors = ["Atmelfan <gustavp@gpa-robotics.com>"]
edition = "2018"
readme = "README.md"
name = "src-ash-power"
version = "0.1.0"

[dependencies]

# ARM cortex stuff
cortex-m = "0.6"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "0.1.2"

# Device crates
shared-bus = {version = "0.1.4", features = ["cortexm"]}
ina219 = { git = "https://github.com/Atmelfan/ina219.git" }
xca9548a = { git = "https://github.com/Atmelfan/xca9548a-rs.git" }
ina3221 = { git = "https://github.com/Atmelfan/ina3221-rs.git" }
stusb4500 = { git = "https://github.com/Atmelfan/stusb4500-rs" }

# MISC
scpi = "0.2.7"
git-version = "0.3.4"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}

embedded-hal = "0.2.3"
# STM32F103
[dependencies.stm32f1xx-hal]
version = "0.6.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "src-ash-power"
test = false
bench = false

[profile.dev]
codegen-units = 1 # better optimizations
opt-level = 's'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.release]
codegen-units = 1 # better optimizations
opt-level = 's'  # Optimize for size.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
